tests/compile_fail/config_display_on_enum.rs
use conflaguration::ConfigDisplay;

#[derive(ConfigDisplay)]
enum BadConfig {
    A,
}

fn main() {}
